@@ -1,4 +1,4 @@
-3.12.0+dev22 (2010-05-05)
+3.12.0+dev23 (2010-05-12)
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
